Use a code font and ligatures.
I love these but maybe not best for the site as it can
be confusing having 2 or 3 characters appear as one
if you're not used to it.

--- a/src/editor.html
+++ b/src/editor.html
@@ -2,6 +2,27 @@
 <html>
 <head>
 <style>
+@font-face {
+  font-family: 'GFXFundamentals JetBrains Mono';
+  src: url('fonts/JetBrainsMono-Regular.woff2');
+}
+@font-face {
+  font-family: 'GFXFundamentals JetBrains Mono';
+  src: url('fonts/JetBrainsMono-Bold.woff2');
+  font-weight: bold;
+}
+@font-face {
+  font-family: 'GFXFundamentals JetBrains Mono';
+  src: url('fonts/JetBrainsMono-Italic.woff2');
+  font-style: italic;
+}
+@font-face {
+  font-family: 'GFXFundamentals JetBrains Mono';
+  src: url('fonts/JetBrainsMono-Bold-Italic.woff2');
+  font-weight: bold;
+  font-style: italic;
+}
+
 html {
   box-sizing: border-box;
 }
