--- a/src/editor.html
+++ b/src/editor.html
@@ -86,7 +86,7 @@ iframe {
     background: white;
 }
 .result .console .log {
-    white-space: pre;
+    white-space: pre-line;
 }
 .other>div,
 .other>div>div {
