--- a/src/editor.html
+++ b/src/editor.html
@@ -182,7 +182,7 @@ iframe {
 </style>
 </head>
 <body>
-<div class="frame">
+<div class="frame notranslate">
     <div class="tabs">
         <div class="panebuttons">
             <button class="button-js">JS</button>
